lavf/mpegts: Consider stream_type 0x0f just a hint towards AAC.

It is also used in the wild to signal latm.

Fixes ticket #6657.